# rust_algo

./: Cargo.toml  bacon.toml  inp  output.rs
src/: basic_graph.rs  comb.rs  coord.rs  dfs_tree.rs  dp.rs  dsu.rs  fenw.rs  game.rs  hld.rs  lib.rs  main.rs  mod_structure.rs  modint.rs  number_theory.rs  prime.rs  range_counter.rs  ring_graph.rs  root_tree.rs  segment_tree.rs  special_combination.rs  string.rs  string_utils.rs  treap.rs  tree_decomp.rs  trie.rs  utils.rs  xor_basic.rs
src/segtree/: lazy.rs  mod.rs  persistent.rs
src/segtree/dynamic/: li_chao.rs
