[package]
name = "cp_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# formal-power-series = { path = "../cprs/crates/polynomial/formal-power-series" }
# static_modint = { path = "../cprs/crates/number_theory/modint/static_modint" }
# binomial = { path = "../cprs/crates/combinatorics/binomial" }
# proconio = "0.5.0"
