[package]
name = "cp_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# numeric_traits = { path = "../cprs/crates/algebra/numeric_traits" }
# formal_power_series = { path = "../cprs/crates/polynomial/formal_power_series" }
# static_modint = { path = "../cprs/crates/number_theory/modint/static_modint" }
# binomial = { path = "../cprs/crates/combinatorics/binomial" }
# offline_dynamic_convex_hull_trick = { path = "../cprs/crates/data_structure/offline_dynamic_convex_hull_trick" }
# lazy_segment_tree = { path = "../cprs/crates/data_structure/segment_tree/lazy_segment_tree" }
# algebraic_structure = { path = "../cprs/crates/algebra/algebraic_structure" }
# algebraic_traits = { path = "../cprs/crates/algebra/algebraic_traits" }
# proconio = "0.5.0"
